--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+apply from: "../.gradle/sign.gradle"
 apply plugin: "java"
 
 targetCompatibility = 1.8
@@ -6,6 +7,15 @@ sourceCompatibility = 1.8
 version = "1.0.0"
 group = "io.github.lxgaming.slowloris"
 archivesBaseName = "Slowloris"
+
+configurations {
+  provided {
+    compile.extendsFrom(provided)
+  }
+  build {
+    finalizedBy(signJar)
+  }
+}
 
 repositories {
   mavenCentral()
