Rewrote build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,61 @@
-apply from: "../.gradle/sign.gradle"
 apply plugin: "java"
+
+def signFile = "../.gradle/sign.gradle"
+if (file(signFile).exists()) {
+    apply from: signFile
+}
 
 targetCompatibility = 1.8
 sourceCompatibility = 1.8
 
-version = "1.0.0"
 group = "io.github.lxgaming.slowloris"
 archivesBaseName = "Slowloris"
+version = "1.0.0"
 
 configurations {
-  provided {
-    compile.extendsFrom(provided)
-  }
-  build {
-    finalizedBy(signJar)
-  }
+    provided {
+        compile.extendsFrom(provided)
+    }
+
+    build {
+        if (project.tasks.findByName("signJar")) {
+            return finalizedBy(signJar)
+        }
+
+        return doLast {
+            println("========== [WARNING] ==========")
+            println()
+            println("   This build is not signed!   ")
+            println()
+            println("========== [WARNING] ==========")
+        }
+    }
 }
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-  compile "com.google.code.gson:gson:2.8.0"
+    compile("com.google.code.gson:gson:2.8.0")
 }
 
 jar {
-  manifest {
-    attributes "Main-Class": "io.github.lxgaming.slowloris.Main"
-  }
-  from {
-    configurations.compile.collect {
-	  it.isDirectory() ? it : zipTree(it)
-	}
-  }
-  from {
-    ["LICENSE"]
-  }
+    manifest {
+        attributes("Main-Class": "io.github.lxgaming.slowloris.Main")
+    }
+
+    from {
+        (configurations.compile - configurations.provided).collect {
+            if (it.isDirectory()) {
+                return it
+            }
+            return zipTree(it)
+        }
+    }
+}
+
+processResources {
+    from("LICENSE")
+    rename("LICENSE", "LICENSE-" + archivesBaseName)
 }
