--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile("com.google.code.gson:gson:2.8.4")
+    compile("com.google.code.gson:gson:2.8.5")
 }
 
 jar {
@@ -30,9 +30,11 @@ jar {
     }
 
     from {
-        (configurations.compile - configurations.provided).collect {
+        (configurations.compile - configurations.provided).findAll({
+            it.isDirectory() || it.name.endsWith(".jar")
+        }).collect({
             it.isDirectory() ? it : zipTree(it)
-        }
+        })
     }
 }
 
